Bug Fixes
Fixed a few layout bugs.

--- a/css/style.css
+++ b/css/style.css
@@ -717,9 +717,13 @@ main {
       z-index: 99; }
   main .main-container {
     background-color: #263238;
-    padding: 0 1.25em 1.25em 1.25em; }
+    padding: 0 0 1.25em 1.25em; }
     main .main-container .chart-container {
-      border-bottom: 1px solid #090909; }
+      border-bottom: 1px solid #090909;
+      padding-right: 0; }
+      @media screen and (min-width: 48em) {
+        main .main-container .chart-container {
+          padding-right: 0.625em; } }
       main .main-container .chart-container #hundred-chart,
       main .main-container .chart-container .fifty-chart {
         position: relative;
@@ -736,7 +740,7 @@ main {
             color: #EEEEEE;
             font-family: "Oswald", Helvetica, Arial, sans-serif;
             text-decoration: none;
-            padding: 0.5em 1.25em; }
+            padding: 0.5em; }
             main .main-container .chart-container #hundred-chart ul li a:hover, main .main-container .chart-container #hundred-chart ul li a.active {
               background: #00bcd4; }
     main .main-container .social-stats {
@@ -862,7 +866,8 @@ main {
       padding: 1.875em 1.25em 1.875em 0; }
       @media screen and (min-width: 48em) {
         main .main-container #settings-area .user-message {
-          border-right: 1px solid #090909; } }
+          border-right: 1px solid #090909;
+          border-bottom: none; } }
       main .main-container #settings-area .user-message fieldset {
         position: relative; }
         main .main-container #settings-area .user-message fieldset aside {
@@ -883,7 +888,6 @@ main {
               border-top: none; }
     main .main-container #settings-area .user-settings {
       border-left: none;
-      border-top: 1px solid #555555;
       padding: 1.875em; }
       @media screen and (min-width: 48em) {
         main .main-container #settings-area .user-settings {
@@ -1024,7 +1028,7 @@ nav.section-nav {
   left: 1.125em;
   top: 0.625em;
   padding: 5px 10px;
-  background: none;
+  background: #3b4d56;
   border: none;
   z-index: 4; }
   #mobile-btn span {
